[package]
name = "traction"
version = "0.2.0"
description = "Solana program for issuing American options."
edition = "2021"
homepage = "https://traction.market"
repository = "https://github.com/tractiondao/traction"
authors = ["Isaac Newton <isaac@traction.market>"]
license = "AGPL-3.0"
keywords = ["solana", "options", "traction", "american", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "traction"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
crate-token = { version = "^0.4", features = ["cpi"] }
num-traits = "0.2"
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint"
] }
static-pubkey = "1.0.2"
vipers = "^2.0.2"
